# poetry-plugin-version

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: publish.yml  test.yml
poetry_plugin_version/: api.py  patch.py  plugin.py  states.py  utils.py
scripts/: format.sh  lint.sh  test.sh
tests/: api.py  conftest.py  test_main.py
tests/assets/build_system/: pyproject.toml
tests/assets/custom_packages/: pyproject.toml
tests/assets/custom_packages_v2/: pyproject.toml
tests/assets/git_tag/: pyproject.toml
tests/assets/multiple_packages/: pyproject.toml
tests/assets/no_config/: pyproject.toml
tests/assets/no_config_source/: pyproject.toml
tests/assets/no_packages/: pyproject.toml
tests/assets/no_standard_dir/: pyproject.toml
tests/assets/pdm_style/: pyproject.toml
tests/assets/poetry_v2/: pyproject.toml
tests/assets/poetry_v2_api/: pyproject.toml
tests/assets/src_layout_api/: pyproject.toml
tests/assets/src_layout_custom_packages/: pyproject.toml
tests/assets/variations/: pyproject.toml
tests/assets/variations/test_custom_version/: main.py
tests/assets/version_dot_py/: pyproject.toml
tests/assets/with_dirname/: pyproject.toml
