[tool.poetry]
name = "poetry-plugin-version"
version = "0.4.0"
description = "Poetry plugin for dynamically extracting the package version from a __version__ variable or a Git tag."
authors = [
    "Sebastián Ramírez <tiangolo@gmail.com>",
    "Waket Zheng <waketzheng@gmail.com>",
]
homepage = "https://github.com/waketzheng/poetry-plugin-version"
documentation = "https://github.com/waketzheng/poetry-plugin-version"
readme = "README.md"
packages = [{include = "poetry_plugin_version"}]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.9"
poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = ">=7.2"}
mypy = "^1.14.1"
pytest = "^8.3.4"
pkginfo = "^1.12.0"
ruff = "^0.9.0"

[tool.poetry.plugins."poetry.plugin"]
poetry-plugin-version = "poetry_plugin_version.plugin:VersionPlugin"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
parallel = true

[tool.mypy]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "poetry_plugin_version.*"
disallow_untyped_defs = true
strict = true
