[tool.poetry]
name = "test-custom-version"
version = "0"
description = ""
authors = ["Sebastián Ramírez <tiangolo@gmail.com>"]
readme = "README.md"
packages = [{include = "custom_package"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry_plugin_version @ http://localhost:8000/dist/poetry_plugin_version-0-py3-none-any.whl"]
build-backend = "poetry_plugin_version.api"

[tool.poetry-plugin-version]
source = "init"
