[project]
name = "test-custom-version"
description = ""
authors = []
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9"

[tool.poetry]
version = "0"

[tool.poetry-plugin-version]
path = "test_custom_version/version.py"

[build-system]
requires = ["poetry-plugin-version@../../.."]
build-backend = "poetry_plugin_version.api"
