[project]
name = "test-custom-version"
description = ""
authors = [{name="Waket Zheng", email="waketzheng@gmail.com"}]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9"

[tool.poetry]
version = "0"

[build-system]
requires = ["poetry-core", "poetry-plugin-version"]
build-backend = "poetry.core.masonry.api"
