[project]
name = "test-custom-version"
description = ""
authors = [{name="Waket Zheng", email="waketzheng@gmail.com"}]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9"

[tool.poetry]
version = "0"

[build-system]
requires = ["poetry_plugin_version @ http://localhost:8000/dist/poetry_plugin_version-0-py3-none-any.whl"]
build-backend = "poetry_plugin_version.api"
