[project]
name = "test-custom-version"
description = ""
authors = []
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.9"

[tool.poetry]
version = "0"

[build-system]
# Relative path only work for `poetry build`, not work for `pip install -e .`
requires = ["poetry-plugin-version@../../.."]
# To test editable install, use absolute path instead
#requires = ["poetry-plugin-version@file://$(pwd)/../../../dist/poetry_plugin_version-0-py3-none-any.whl"]
build-backend = "poetry_plugin_version.api"
