[project]
name = "test-custom-version"
dynamic = ["version"]
description = ""
authors = []
readme = "README.md"

[tool.poetry]
version = "0"
packages = [{include = "test_custom_version", from = "src"}]

[build-system]
requires = ["poetry-plugin-version@../../.."]
build-backend = "poetry_plugin_version.api"
