[tool.poetry]
name = "test-custom-version"
version = "0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-plugin-version@../../.."]
build-backend = "poetry_plugin_version.api"

[tool.poetry-plugin-version]
source = "version.py"
