[tool.poetry]
name = "test-custom-version"
version = "0"
description = ""
authors = ["Sebastián Ramírez <tiangolo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core", "poetry-plugin-version>=0.5.0"]
build-backend = "poetry_plugin_version.api"

[tool.poetry-plugin-version]
source = "test_custom_version/version.py"
